Feat: updated the css on the home component to match the login better

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,22 +1,50 @@
-.top-elements {
+.home {
+  min-height: 100vh;
+  // min-height: 91.5vh;
+  // background: linear-gradient(135deg, #a8e6cf 0%, #dcedc8 50%, #f8f8f8 100%);
+  // background-image: url("/assets/meditation.jpg");
+  background-image: url("/assets/waterfall2.jpg");
+  background-color: rgba(255,255,255,0.4);
+  background-blend-mode: lighten;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 80px;
+}
+.home-contents {
+  // background: rgba(255, 255, 255, 0.5);
+
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100%;
-  width: 100%;
-  margin-top: 80px;
+  justify-content: center;
+  // height: 100%;
+  height: 80vh;
+  width: 90vw;
+  // width: 100%;
+  // margin-top: 80px;
+  // padding-top: 90px;
   
   .top-text {
     display: flex;
     flex-direction: column;
     align-items: center;
+    
     width: 80vw;
     color: var(--dark-green);
-    font-size: 1.5rem;
+    color: black;
+    // font-size: 1.5rem;
+    font-size: 2rem;
+    font-weight: 400;
     
-    h2 {
-      font-size: 2.75rem;
+    .welcome-message {
+      font-size: 5rem;
       margin-bottom: 0;
+      text-align: center;
     }
 
     .welcome-text {
@@ -24,38 +52,52 @@
     }
   }
 
-  .welcome-img {
-    object-fit: cover;
-    width: 100%;
-    height: 50vh;
-    padding: 10px 0;
-  }
+  // .welcome-img {
+  //   object-fit: cover;
+  //   width: 100%;
+  //   height: 50vh;
+  //   padding: 10px 0;
+
+  //   @media screen and (max-width: 480px) {
+  //     height: 30vh;
+  //   }
+
+  //   @media screen and (max-width: 375px) {
+  //     height: 25vh;
+  //   }
+  // }
 }
 
-.nav-buttons {
-  display: flex;
-  justify-content: center;
-  height: 100%;
-  width: 100%;
-  margin: 40px 0;
+// .nav-buttons {
+//   display: flex;
+//   justify-content: center;
+//   height: 100%;
+//   width: 100%;
+//   margin: 40px 0;
 
-  a {
-    border-radius: 5px;
-    background-color: var(--light-green);
-    box-shadow: var(--shadow-elevation-medium);
+//   .poses-h-button,
+//   .routines-h-button {
+//     border-radius: 20px;
+//     background-color: var(--light-green);
+//     box-shadow: var(--shadow-elevation-medium);
 
-    color: black;
-    font-size: larger;
-    text-align: center;
-    line-height: 50px;
-    height: 50px;
-    width: 300px;
-    transition-duration: 0.4s;
-    margin: 0 10px;
+//     color: black;
+//     font-size: larger;
+//     text-align: center;
+//     // line-height: 50px;
+//     // height: 50px;
+//     width: 300px;
+//     transition-duration: 0.4s;
+//     margin: 0 10px;
+//     padding: 18px 60px;
 
-    &:hover {
-      background-color: var(--dark-green);
-      color: white;
-    }
-  }
-}
+//     &:hover {
+//       background-color: var(--dark-green);
+//       color: white;
+//     }
+
+//     @media screen and (max-width: 390px) {
+//       padding: 18px 40px;
+//     }
+//   }
+// }
