--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -99,6 +99,10 @@
       background-color: var(--light-green);
       color: whitesmoke;
       font-weight: 600;
+
+      &:disabled {
+        background-color: #C3D9C4;
+      }
     }
 
     .divider {
